# Rust-API-Gateway

./: .env  Cargo.toml  README.md  api_keys.yaml  gateway.yaml  gateway_config.yaml
examples/: circuit_breaker_test_server.rs  server.rs  test_server.rs
src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  proxy.rs  state.rs
src/features/: auth.rs  mod.rs
src/features/auth/: auth.rs
src/features/circuit_breaker/: circuit_breaker.rs
src/features/rate_limiter/: state.rs
src/middleware/: auth.rs  mod.rs
src/middleware/auth/: auth.rs
src/middleware/cache/: cache.rs
src/middleware/circuit_breaker/: circuit_breaker.rs
src/middleware/rate_limiter/: rate_limit.rs
src/middleware/request_id/: request_id.rs
src/utils/: config_path.rs  hot_reload.rs  metric_handler.rs  mod.rs
tests/: auth_test.rs  initial_setup.rs  integration_test.rs  rate_limit.rs
