[package]
name = "rust_api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
axum = {version = "0.8.4", features = ["macros"]}
serde = { version = "1.0.219", features = ["derive","rc"] }
serde_yaml = "0.9.33"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json"]}
http = "1.3.1"
hyper = "1.6.0"
bytes = "1.10.1"
http-body-util = "0.1.3"
serde_json = "1.0.142"
once_cell = "1.21.3"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "examples/server.rs"
